# pngEdit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pngEditorConfig.h.in
doc/: Doxyfile
include/: chunk.h  controller.h  crc32_c.h  defs.h  engine.h  htonntoh.h  model.h  pngfile.h  singleton.h  utf4win.h  view.h  zconf.h  ztools.h
src/: CMakeLists.txt  chunk.cpp  controller.cpp  crc32_c.c  engine.cpp  main.cpp  model.cpp  pngfile.cpp  utf4win.cpp  view.cpp  ztools.cpp
